updated `build.gradle`